--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "ethers": "^6.13.1",
+    "opensea-js": "^7.1.10"
+  },
   "devDependencies": {
     "@types/node": "^18.11.14",
     "ts-node": "^10.9.1",
