--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "build": "tsc --build && tsc-alias"
+    "build": "tsc --build && tsc-alias",
+    "main": "ts-node src/index.ts",
+    "typechain:gen": "typechain --target=ethers-v6 abis/*.json --out-dir typechain-types"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +16,13 @@
     "opensea-js": "^7.1.10"
   },
   "devDependencies": {
+    "@typechain/ethers-v6": "^0.5.1",
     "@types/node": "^18.11.14",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
+    "typechain": "^8.3.2",
     "typescript": "^4.9.5"
   }
 }
